tests/valid/noFunctionExpressionName.ts
// @ts-nocheck
const fn = (x: number) => x;
