tests/invalid/noValueTypeOf.ts
// @ts-nocheck
const x = 5;
const t = typeof x;
